[gd_scene load_steps=8 format=3 uid="uid://bmq5i64fjy5ix"]

[ext_resource type="Script" path="res://Scripts/laser.gd" id="1_v3w77"]
[ext_resource type="Texture2D" uid="uid://cauinkg3h20xk" path="res://Assets/Sprites/Laser.png" id="1_ybxoo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hm8n"]
size = Vector2(4, 64)

[sub_resource type="Animation" id="Animation_mh7e8"]
resource_name = "fade_laser"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.95),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disable_collision"
}]
}

[sub_resource type="Animation" id="Animation_0vek0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s3j08"]
resource_name = "fade_in_laser"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.99),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_collision"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1bowx"]
_data = {
"RESET": SubResource("Animation_0vek0"),
"fade_in_laser": SubResource("Animation_s3j08"),
"fade_laser": SubResource("Animation_mh7e8")
}

[node name="laser" type="AnimatableBody2D"]
script = ExtResource("1_v3w77")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ybxoo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8hm8n")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1bowx")
}

[node name="waitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="waitTimer" to="." method="_on_wait_timer_timeout"]
